...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/vMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/vMovies"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
